@@ -167,7 +167,7 @@ public class DateAverageDialog extends JDialog {
 						String[] selected = manager.selectedItems.stream().toArray(String[]::new);
 						if (selected == null || selected.length == 0) return;
 						String output = textField.getText();
-						if (output == null || output.isBlank()) return;
+						if (output == null || output.trim().isEmpty()) return;
 						DateAverageMapper.from = (Date) datePicker.getModel().getValue();
 						if (DateAverageMapper.from == null) return;
 						DateAverageMapper.to = (Date) datePicker.getModel().getValue();
